--- a/app/views/quizzes/index.html.erb
+++ b/app/views/quizzes/index.html.erb
@@ -7,9 +7,9 @@
   <% @quizzes.each do |quiz| %>
     <%= render quiz %>
     <p>
-      <%= link_to "Show this quiz", quiz, class: "inline-block rounded border border-indigo-600 bg-indigo-600 px-12 py-3 text-sm font-medium text-white hover:bg-transparent hover:text-indigo-600 focus:outline-none focus:ring active:text-indigo-500" %>
+      <%= link_to "Show this quiz", quiz, class: btn_class %>
     </p>
   <% end %>
 </div>
 
-<%= link_to "New quiz", new_quiz_path, class: "inline-block rounded border border-indigo-600 bg-indigo-600 px-12 py-3 text-sm font-medium text-white hover:bg-transparent hover:text-indigo-600 focus:outline-none focus:ring active:text-indigo-500" %>
+<%= link_to "New quiz", new_quiz_path, class: btn_class %>
