--- a/app/views/quizzes/_quiz.html.erb
+++ b/app/views/quizzes/_quiz.html.erb
@@ -3,10 +3,16 @@
     <strong>Title:</strong>
     <%= quiz.title %>
   </p>
-
   <p>
     <strong>Description:</strong>
     <%= quiz.description %>
   </p>
 
+  <strong>Questions</strong>
+  <%= link_to 'Add question', new_quiz_question_path(@quiz), class: btn_class %>
+  <ol>
+    <% quiz.questions.each do |question| %>
+      <li><%= question.question_text %></li>
+    <% end %>
+  </ol>
 </div>
