--- a/app/views/questions/new.html.erb
+++ b/app/views/questions/new.html.erb
@@ -4,5 +4,5 @@
 <%= render "form", question: @question %>
 
 <div class="mt-6">
-  <%= link_to "Cancel", @quiz, class: btn_class %>
+  <%= link_to "Cancel", @quiz %>
 </div>
