--- a/app/views/quizzes/_quiz.html.erb
+++ b/app/views/quizzes/_quiz.html.erb
@@ -3,16 +3,32 @@
     <strong>Title:</strong>
     <%= quiz.title %>
   </p>
+
   <p>
     <strong>Description:</strong>
     <%= quiz.description %>
   </p>
 
-  <strong>Questions</strong>
-  <%= link_to 'Add question', new_quiz_question_path(@quiz), class: btn_class %>
-  <ol>
+  <h3>Questions</h3>
+  <%= link_to 'Add question', new_quiz_question_path(@quiz), class: btn_class_small %>
+  <table class="min-w-full divide-y-2 divide-gray-200 bg-white text-sm">
     <% quiz.questions.each do |question| %>
-      <li><%= question.question_text %></li>
+      <thead class="text-left">
+        <tr>
+          <th colspan='2' class="whitespace-nowrap px-4 py-2 font-medium text-gray-900"><%= question.question_text %></th>
+          <th><%= button_to "Deleate", question, method: :delete, class: 'inline-block rounded border border-red-600 px-1 py-1 text-xs font-medium text-red-600 hover:bg-red-600 hover:text-white focus:outline-none focus:ring active:bg-red-500' %></th>
+          <th><%= link_to "Edit", edit_question_path(question), class: 'inline-block rounded border border-indigo-600 px-1 py-1 text-xs font-medium text-indigo-600 hover:bg-indigo-600 hover:text-white focus:outline-none focus:ring active:bg-indigo-500' %></th>
+        </tr>
+      </thead>
+      <tbody>
+        <% question.answers.each do |answer| %>
+          <tr>
+            <td class="whitespace-nowrap px-4 py-2 text-gray-700"><%= answer.answer_text %></td>
+            <td class="whitespace-nowrap px-4 py-2 text-gray-700"><%= answer.correct ? "pareiza" : "" %></td>
+            <td class="whitespace-nowrap px-4 py-2 text-gray-700"><%= format_date question.created_at %></td>
+          </tr>
+        <% end %>
+      </tbody>
     <% end %>
-  </ol>
+  </table>
 </div>
