--- a/app/views/quizzes/_quiz.html.erb
+++ b/app/views/quizzes/_quiz.html.erb
@@ -16,7 +16,7 @@
       <thead class="text-left">
         <tr>
           <th colspan='2' class="whitespace-nowrap px-4 py-2 font-medium text-gray-900"><%= question.question_text %></th>
-          <th><%= button_to "Deleate", question, method: :delete, class: 'inline-block rounded border border-red-600 px-1 py-1 text-xs font-medium text-red-600 hover:bg-red-600 hover:text-white focus:outline-none focus:ring active:bg-red-500' %></th>
+          <th><%= button_to "Deleate", question, method: :delete, data: { turbo_confirm: "Really?" }, class: 'inline-block rounded border border-red-600 px-1 py-1 text-xs font-medium text-red-600 hover:bg-red-600 hover:text-white focus:outline-none focus:ring active:bg-red-500' %></th>
           <th><%= link_to "Edit", edit_question_path(question), class: 'inline-block rounded border border-indigo-600 px-1 py-1 text-xs font-medium text-indigo-600 hover:bg-indigo-600 hover:text-white focus:outline-none focus:ring active:bg-indigo-500' %></th>
         </tr>
       </thead>
