Added the option to take the quizzes, share the results, see the results

--- a/app/views/questions/_form.html.erb
+++ b/app/views/questions/_form.html.erb
@@ -27,7 +27,7 @@
 
     <div data-nested-form-target="target"></div>
 
-    <button type="button" data-action="nested-form#add", class='<%= btn_class_small %>'>Add answer</button>
+    <button type="button" data-action="nested-form#add" data-nested-form-target="target" class='<%= btn_class_small %>'>Add answer</button>
 
   </div>
 
