--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -25,6 +25,6 @@
   </div>
 
   <div class="mt-12">
-    <%= link_to "New Question", new_question_path, class: "#{btn_class} text-lg py-4 px-8" %>
+    <%= link_to "New Question", new_quiz_question_path(@quiz), class: "#{btn_class} text-lg py-4 px-8" %>
   </div>
 </div>
