--- a/app/views/questions/edit.html.erb
+++ b/app/views/questions/edit.html.erb
@@ -1,10 +1,16 @@
-<h1>Editing question</h1>
+<div class="bg-gray-100 min-h-screen py-12">
+  <div class="container mx-auto px-4 sm:px-6 lg:px-8">
+    <div class="bg-white shadow-xl rounded-lg overflow-hidden">
+      <div class="p-6 sm:p-10">
+        <h1 class="text-3xl font-extrabold text-gray-900 mb-8">Editing Question</h1>
 
-<%= render "form", question: @question %>
+        <%= render "form", question: @question %>
 
-<br>
-
-<div>
-  <%= link_to "Show this question", @question,  class: btn_class_small %> 
-  
+        <div class="mt-8 flex justify-between items-center">
+          <%= link_to "Show this question", @question, class: "inline-flex items-center px-4 py-2 border border-transparent text-base font-medium rounded-md shadow-sm text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500" %>
+          <%= link_to "Back to quiz", quiz_path(@question.quiz), class: "inline-flex items-center px-4 py-2 border border-gray-300 shadow-sm text-base font-medium rounded-md text-gray-700 bg-white hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500" %>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
