--- a/app/views/quizzes/new.html.erb
+++ b/app/views/quizzes/new.html.erb
@@ -1,9 +1,15 @@
-<h1>New quiz</h1>
+<div class="bg-gradient-to-r from-blue-100 to-indigo-100 min-h-screen py-12">
+  <div class="max-w-4xl mx-auto px-4 sm:px-6 lg:px-8">
+    <div class="bg-white shadow-2xl rounded-lg overflow-hidden">
+      <div class="p-6 sm:p-10">
+        <h1 class="text-4xl font-bold text-indigo-800 mb-8">Create New Quiz</h1>
 
-<%= render "form", quiz: @quiz %>
+        <%= render "form", quiz: @quiz %>
 
-<br>
-
-<div>
-  <%= link_to "Back to quizzes", quizzes_path, class: btn_class %>
+        <div class="mt-8">
+          <%= link_to "Back to quizzes", quizzes_path, class: "inline-flex items-center px-6 py-3 border border-transparent text-base font-medium rounded-md text-indigo-700 bg-indigo-100 hover:bg-indigo-200 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 transition duration-150 ease-in-out" %>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
