--- a/app/views/quizzes/results.html.erb
+++ b/app/views/quizzes/results.html.erb
@@ -2,7 +2,7 @@
   <div class="container mx-auto px-4 sm:px-6 lg:px-8">
     <div class="bg-white shadow-xl rounded-lg overflow-hidden">
       <div class="p-6 sm:p-10">
-        <h1 class="text-3xl font-extrabold text-gray-900 mb-4"><%= @quiz.title %> - Results</h1>
+        <h1 class="text-3xl font-extrabold text-gray-900 mb-4"><%= @quiz.title %> - Results for <%= params[:user_name] %></h1>
         <p class="text-xl text-gray-600 mb-8">Your score: <%= @score %>%</p>
 
         <div class="space-y-8">
