--- a/app/views/quizzes/index.html.erb
+++ b/app/views/quizzes/index.html.erb
@@ -10,13 +10,13 @@
             <h2 class="text-2xl font-semibold mb-2 text-indigo-800"><%= quiz.title %></h2>
             <p class="text-gray-600 mb-4"><%= quiz.description %></p>
             <div class="flex flex-wrap justify-between items-center gap-2">
-              <%= link_to "View", quiz, class: "btn-primary" %>
+              <%= link_to "View", quiz, class: "inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500" %>
               <% if quiz.has_questions? %>
-                <%= link_to "Take Quiz", take_quiz_path(quiz), class: "btn-secondary" %>
+                <%= link_to "Take Quiz", take_quiz_path(quiz), class: "inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-green-700 hover:bg-green-800 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-green-700" %>
               <% else %>
-                <span class="btn-disabled" title="This quiz doesn't have any questions yet">Take Quiz</span>
+                <span class="inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-gray-400 bg-gray-200 cursor-not-allowed" title="This quiz doesn't have any questions yet">Take Quiz</span>
               <% end %>
-              <%= link_to "Top Scores", top_scores_quiz_path(quiz), class: "btn-tertiary" %>
+              <%= link_to "Top Scores", top_scores_quiz_path(quiz), class: "inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-blue-600 hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500" %>
             </div>
           </div>
         </div>
@@ -24,7 +24,7 @@
     </div>
 
     <div class="mt-12 text-center">
-      <%= link_to "Create New Quiz", new_quiz_path, class: "btn-primary text-lg py-3 px-8" %>
+      <%= link_to "Create New Quiz", new_quiz_path, class: "inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500" %>
     </div>
   </div>
 </div>
