--- a/app/views/quizzes/shared_results.html.erb
+++ b/app/views/quizzes/shared_results.html.erb
@@ -1,4 +1,4 @@
-<div class="bg-gray-100 min-h-screen py-12">
+<div class="bg-gradient-to-r from-blue-100 to-indigo-100 min-h-screen py-12">
   <div class="container mx-auto px-4 sm:px-6 lg:px-8">
     <div class="bg-white shadow-xl rounded-lg overflow-hidden">
       <div class="p-6 sm:p-10">
@@ -7,7 +7,7 @@
 
         <div class="space-y-8">
           <% @questions.each do |question| %>
-            <div class="bg-gray-50 rounded-lg p-6">
+            <div class="bg-indigo-50 shadow-md rounded-lg p-6">
               <h2 class="text-xl font-semibold mb-4"><%= question.question_text %></h2>
               <div class="space-y-2">
                 <% question.answers.each do |answer| %>
