--- a/app/views/quizzes/available.html.erb
+++ b/app/views/quizzes/available.html.erb
@@ -6,8 +6,8 @@
       <% @quizzes.each do |quiz| %>
         <div class="bg-indigo-100 rounded-lg p-6 mb-8">
           <h2 class="text-xl font-semibold mb-2"><%= quiz.title %></h2>
-          <p class="text-gray-600 mb-4"><%= quiz.description %></p>
-          <p class="text-sm text-gray-500 mb-2">
+          <p class="text-black-600 mb-4"><%= quiz.description %></p>
+          <p class="text-sm text-green-950 mb-2">
             Created by: <%= quiz.creator ? quiz.creator.username : 'Unknown' %>
           </p>
           <%= link_to "Take Quiz", take_quiz_path(quiz), class: "bg-green-600 text-white py-2 px-4 rounded hover:bg-green-700" %>
