--- a/app/views/quizzes/top_scores.html.erb
+++ b/app/views/quizzes/top_scores.html.erb
@@ -32,7 +32,7 @@
         <% end %>
 
         <div class="mt-8 space-x-4">
-          <%= link_to "Back to quizzes", quizzes_path, class: "inline-flex items-center px-6 py-3 border border-transparent text-base font-medium rounded-md text-indigo-700 bg-indigo-100 hover:bg-indigo-200 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 transition duration-150 ease-in-out" %>
+          <%= link_to "Back to quizzes", available_quizzes_path, class: "inline-flex items-center px-6 py-3 border border-transparent text-base font-medium rounded-md text-indigo-700 bg-indigo-100 hover:bg-indigo-200 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 transition duration-150 ease-in-out" %>
           <% if params[:from_profile] %>
             <%= link_to "Back to Profile", user_profile_path, class: "inline-flex items-center px-6 py-3 border border-transparent text-base font-medium rounded-md text-indigo-700 bg-indigo-100 hover:bg-indigo-200 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 transition duration-150 ease-in-out" %>
           <% end %>
