--- a/app/views/quizzes/available.html.erb
+++ b/app/views/quizzes/available.html.erb
@@ -20,6 +20,7 @@
           <div class="flex space-x-2">
             <%= link_to "Take Quiz", take_quiz_path(quiz), class: "bg-green-600 text-white py-2 px-4 rounded hover:bg-green-700" %>
             <%= link_to "Top Scores", top_scores_quiz_path(quiz), class: "bg-blue-600 text-white py-2 px-4 rounded hover:bg-blue-700" %>
+            <%= link_to "View Feedbacks", feedbacks_quiz_path(quiz), class: "bg-purple-600 text-white py-2 px-4 rounded hover:bg-purple-700" %>
           </div>
         </div>
       <% end %>
